--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,4 +2,4 @@ name: scheduled_reply
 description: 一个强大的定时回复插件，允许您为不同群组设置在每天指定时间发送的特定消息。
 version: 1.0.0
 author: tacbana
-repo: https://github.com/tacbana/
+repo: https://github.com/tacbana/astrbot_plugin_scheduled_reply
